--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -3,211 +3,178 @@
   author={Rémi D.},
   journal={craft ai},
   year={2015},
-  medium={Электронный ресурс},
   url = {https://www.craft.ai/blog/the-maturity-of-visual-programming},
   urldate = {30.05.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{blocklysite,
   title={Blockly},
   journal={Google Developers},
-  year={2021},
-  medium={Электронный ресурс},
   url = {https://developers.google.com/blockly},
   urldate = {30.05.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{flowgorithm,
   title={Flowgorithm},
   journal={Flowgorithm - Flowchart Programming Language},
-  year={2021},
-  medium={Электронный ресурс},
   url = {http://www.flowgorithm.org/},
   urldate = {30.05.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{blueprint,
   title={Blueprint Visual Scripting},
   journal={Unreal Engine Documentation},
-  year={2021},
-  medium={Электронный ресурс},
   url = {https://docs.unrealengine.com/4.26/en-US/ProgrammingAndScripting/Blueprints/},
   urldate = {30.05.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{specialcase,
-  title={Flo},
-  journal={Framer},
-  year={2021},
-  medium={Электронный ресурс},
+  title={Special Case},
+  author={Martin Fowler},
+  journal={EEA Catalog},
   url = {https://martinfowler.com/eaaCatalog/specialCase.html},
   urldate = {05.06.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{cakepattern,
-  title={Flo},
-  journal={Framer},
-  year={2021},
-  medium={Электронный ресурс},
+  title={Examples of cake pattern in scala for injecting singleton and non-singleton dependencies },
+  journal={GitHub},
   url = {https://github.com/davidmoten/cake-pattern},
   urldate = {05.06.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{purefunctions,
   title={Pure Functions, Laziness, I/O, and Monads},
   journal={School of Haskell},
-  year={2021},
+  author={Bartosz Milewski},
+  year={2014},
   medium={Электронный ресурс},
   url = {https://www.schoolofhaskell.com/school/starting-with-haskell/basics-of-haskell/3-pure-functions-laziness-io},
   urldate = {30.05.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{partialapplication,
   title={Partial application},
   journal={HaskellWiki},
-  year={2021},
-  medium={Электронный ресурс},
   url = {https://wiki.haskell.org/Partial_application},
   urldate = {30.05.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{elmarchitecture,
   title={The Elm Architecture},
   journal={An Introduction to Elm},
-  year={2021},
-  medium={Электронный ресурс},
   url = {https://guide.elm-lang.org/architecture/},
   urldate = {30.05.2021},
-  language = {english}
+  language = {russian}
 }
 
 
 @online{llvmlang,
   title={LLVM Language Reference Manual},
   journal={LLVM 12 Documentation},
-  year={2021},
-  medium={Электронный ресурс},
   url = {https://llvm.org/docs/LangRef.html},
   urldate = {30.05.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{v8crankshaft,
   title={A New Crankshaft for V8},
   journal={Chromium Blog},
-  year={2021},
-  medium={Электронный ресурс},
+  year={2010},
   url = {https://blog.chromium.org/2010/12/new-crankshaft-for-v8.html},
   urldate = {30.05.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{enso,
-  title={Enso},
-  year={2021},
-  medium={Электронный ресурс},
+  title={A new kind of programming language},
+  journal={Enso},
   url = {https://enso.org/language},
   urldate = {30.05.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{adobexd,
-  title={The prototyping tool for teams},
-  journal={Framer},
-  year={2021},
-  medium={Электронный ресурс},
+  title={Быстрый и мощный инструмент для создания UI/UX и совместной работы},
+  journal={Adobe XD},
   url = {https://www.adobe.com/ru/products/xd.html},
   urldate = {30.05.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{flo,
-  title={Flo},
-  journal={Framer},
-  year={2021},
-  medium={Электронный ресурс},
+  title={ flo: A visual, purely functional programming language },
+  journal={GitHub},
   url = {https://github.com/elliottlawrence/flo},
   urldate = {30.05.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{scala,
-  title={Flo},
-  journal={Framer},
-  year={2021},
-  medium={Электронный ресурс},
-  url = {https://github.com/elliottlawrence/flo},
+  title={The Scala Programming Language},
+  journal={Scala},
+  url = {https://www.scala-lang.org/},
   urldate = {05.06.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{svelte,
-  title={Flo},
-  journal={Framer},
-  year={2021},
-  medium={Электронный ресурс},
-  url = {https://github.com/elliottlawrence/flo},
+  title={Cybernetically enhanced web apps},
+  journal={Svelte},
+  url = {https://svelte.dev/},
   urldate = {05.06.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{jetty,
-  title={Flo},
-  journal={Framer},
-  year={2021},
-  medium={Электронный ресурс},
-  url = {https://github.com/elliottlawrence/flo},
+  title={Eclipse Jetty},
+  journal={The Eclipse Foundation},
+  url = {https://www.eclipse.org/jetty/},
   urldate = {05.06.2021},
-  language = {english}
+  language = {russian}
 }
 
 @online{scalatra,
-  title={Flo},
-  journal={Framer},
-  year={2021},
-  medium={Электронный ресурс},
-  url = {https://github.com/elliottlawrence/flo},
+  title={Scalatra},
+  url = {https://scalatra.org/},
   urldate = {05.06.2021},
-  language = {english}
+  language = {russian}
+}
+
+@online{harrison97,
+  title     = {Введение в функциональное программирование},
+  author    = {Джон Харрисон},
+  year      = {1997},
+  url = {https://funprog-ru.github.io/},
+  urldate = {30.05.2021},
+  language = {russian}
 }
 
 @book{moderncompilerml,
-  title     = {Modern Compiler Implementation in ML},
-  author    = {Andrew W. Appel},
-  publisher = {Cambridge University Press},
-  year      = {2004},
-  series    = {},
-  edition   = {},
-  volume    = {}
-}
-
-@book{harrison97,
-  title     = {Введение в функциональное программирование},
-  author    = {Джон Харрисон},
-  publisher = {Google},
-  isbn      = {},
-  year      = {1997},
-  series    = {},
-  edition   = {},
-  volume    = {}
+author = {Appel, Andrew W.},
+title = {Modern Compiler Implementation in ML: Basic Techniques},
+year = {1997},
+isbn = {0521587751},
+publisher = {Cambridge University Press},
+address = {USA}
 }
 
 @book{engineeringacompiler,
-  title     = {Engineering a compiler},
-  author    = {Keith Cooper; Linda Torczon},
-  publisher = {Morgan Kaufmann},
-  year      = {2012},
-  series    = {},
-  edition   = {},
-  volume    = {}
+author = {Torczon, Linda and Cooper, Keith},
+title = {Engineering A Compiler},
+year = {2007},
+isbn = {012088478X},
+publisher = {Morgan Kaufmann Publishers Inc.},
+address = {San Francisco, CA, USA},
+edition = {2nd}
 }
 
 @book{elminaction,
@@ -215,9 +182,7 @@
   author    = {Richard Feldman},
   publisher = {Manning Publications},
   year      = {2020},
-  series    = {},
-  edition   = {},
-  volume    = {}
+  isbn = {9781617294044}
 }
 
 @book{dragonbook,
@@ -226,9 +191,7 @@
   publisher = {ООО “И.Д. Вильямс”},
   isbn      = {978-5-907114-28-9},
   year      = {2018},
-  series    = {},
   edition   = {2},
-  volume    = {}
 }
 
 @book{r6rs,
@@ -245,81 +208,62 @@ numerous short and extended examples and exercises.}
 
 @book{fp93,
   title     = {Функциональное программирование},
-  author    = {Филд А., Харрисон П.},
+  author    = {Филд А. and Харрисон П.},
   publisher = {Мир},
   year      = {1993},
-  series    = {},
-  edition   = {},
-  volume    = {}
+  isbn = {5-03-001870-0}
 }
 
-%%% !!! ЗАГЛУШКИ !!! %%%%
-
-
-
-
 @book{sicp,
-  title     = {SICP},
-  author    = {},
-  publisher = {MIT Press},
-  year      = {},
-  series    = {},
-  edition   = {},
-  volume    = {}
+  added-at = {2012-12-17T22:51:51.000+0100},
+  address = {Cambridge},
+  author = {Abelson, Harold and Sussman, Gerald Jay and {with~Julie~Sussman}},
+  biburl = {https://www.bibsonomy.org/bibtex/211f37613ed3a6705eca058670186d406/gron},
+  edition = {2nd~Editon},
+  interhash = {775b3d446d8c4e21ec98778a82c025c7},
+  intrahash = {11f37613ed3a6705eca058670186d406},
+  isbn = {0-262-01153-0},
+  keywords = {LexicalAddressing SICP},
+  publisher = {MIT Press/McGraw-Hill},
+  timestamp = {2012-12-17T22:51:51.000+0100},
+  title = {Structure and Interpretation of Computer Programs},
+  year = 1996
 }
 
 @book{algrebrakirkinskii,
-  title     = {Алгебра},
-  author    = {},
-  publisher = {MIT Press},
-  year      = {},
-  series    = {},
-  edition   = {},
-  volume    = {}
+  title={Линейная алгебра и аналитическая геометрия},
+  author={Киркинский, А. С.},
+  year={2006},
+  publisher={Академический проект}
 }
-
-
 
 @book{staroletovfunlang,
-  title     = {Старолетов ФунЛанг},
-  author    = {},
-  publisher = {MIT Press},
-  year      = {},
-  series    = {},
-  edition   = {},
-  volume    = {}
+  title={Старолетов, С.М. Функциональные языки распределённых систем: учебное пособие},
+  author={Старолетов, С.М.},
+  year={2019}
 }
 
-
 @book{clrs,
-  title     = {Кормен},
-  author    = {},
-  publisher = {MIT Press},
-  year      = {},
-  series    = {},
-  edition   = {},
-  volume    = {}
+  title={Алгоритмы. Построение и анализ:[пер. с англ.]},
+  author={Кормен, Томас and Лейзерсон, Чарльз and Ривест, Рональд and Штайн, Клиффорд},
+  year={2009},
+  publisher={Издательский дом Вильямс}
 }
 
 @book{tapl,
-  title     = {Типы в языках программирования},
-  author    = {Бенджамин Пирс},
-  publisher = {Лямбда пресс, Добросвет},
-  isbn      = {},
-  year      = {2010},
-  series    = {},
-  edition   = {},
-  volume    = {}
+  title={Типы в языках программирования},
+  author={Пирс, Бенджамин},
+  journal={М.: Лямбда Пресс Добросвет},
+  pages={656},
+  year={2012}
 }
 
 @book{gof,
-  title     = {Кормен},
-  author    = {},
-  publisher = {MIT Press},
-  year      = {},
-  series    = {},
-  edition   = {},
-  volume    = {}
+  title     = {Приемы объектно-ориентированного проектирования. Паттерны проектирования},
+  author    = {Гамма, Эрих and Хелм, Ричард and Джонсон, Ральф and Влиссидес, Джон},
+  publisher = {Питер},
+  year      = {2019},
+  isbn      = {978-5-4461-1213-5}
 }
 
 @article{agentsheetsmovingbeyondsyntax,
@@ -334,22 +278,28 @@ numerous short and extended examples and exercises.}
 }
 
 @article{sorengardsestoftreftransp,
-  author = {},
-  year = {},
-  month = {},
-  pages = {},
-  title = {},
-  isbn = {},
-  doi = {}
+  author = {Sondergaard, Harald and Sestoft, Peter},
+  title = {Referential Transparency, Definiteness and Unfoldability},
+  year = {1990},
+  issue_date = {1990},
+  publisher = {Springer-Verlag},
+  address = {Berlin, Heidelberg},
+  volume = {27},
+  number = {6},
+  issn = {0001-5903},
+  journal = {Acta Inf.},
+  month = jan,
+  pages = {505–517},
+  numpages = {13}
 }
 
 
 @article{backus77,
-author = {Backus, John},
-year = {1977},
-month = {01},
-pages = {29},
-title = {Can programming be liberated from the von Neumann style?: a functional style and its algebra of programs},
-isbn = {978-1-4503-1049-9},
-doi = {10.1145/1283920.1283933}
+  author = {Backus, John},
+  year = {1977},
+  month = {01},
+  pages = {29},
+  title = {Can programming be liberated from the von Neumann style?: a functional style and its algebra of programs},
+  isbn = {978-1-4503-1049-9},
+  doi = {10.1145/1283920.1283933}
 }
