--- a/common/data.tex
+++ b/common/data.tex
@@ -1,7 +1,7 @@
 %%% Основные сведения %%%
-\newcommand{\thesisAuthorLastName}{\fixme{Фамилия}}
-\newcommand{\thesisAuthorOtherNames}{\fixme{Имя Отчество}}
-\newcommand{\thesisAuthorInitials}{\fixme{И.\,О.}}
+\newcommand{\thesisAuthorLastName}{Завьялов}
+\newcommand{\thesisAuthorOtherNames}{Антон Алексеевич}
+\newcommand{\thesisAuthorInitials}{А.\,А.}
 \newcommand{\thesisAuthor}             % Диссертация, ФИО автора
 {%
     \texorpdfstring{% \texorpdfstring takes two arguments and uses the first for (La)TeX and the second for pdf
@@ -15,9 +15,9 @@
 %\newcommand{\thesisUdk}                % Диссертация, УДК
 %{\fixme{xxx.xxx}}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\fixme{Отчёт по преддипломной практике, Завьялов}}
+{Проектирование визуального языка с возможностями оптимизации рекурсии}
 \newcommand{\thesisSpecialtyNumber}    % Диссертация, специальность, номер
-{\fixme{09.03.04}}
+{09.03.04}
 \newcommand{\thesisSpecialtyTitle}     % Диссертация, специальность, название (название взято с сайта ВАК для примера)
 {\fixme{Проектирование визуального языка с возможностями оптимизации рекурсии}}
 %% \newcommand{\thesisSpecialtyTwoNumber} % Диссертация, вторая специальность, номер
