appendix pdf numeration

--- a/Dissertation/appendix.tex
+++ b/Dissertation/appendix.tex
@@ -1,5 +1,5 @@
 \addcontentsline{toc}{chapter}{Приложение А\quad Задание на выполнение ВКР}
-\includepdf[pages=4-5,addtotoc={
+\includepdf[pages=4-5,pagecommand={},addtotoc={
 	1,chapter,1,Задание на выполнение ВКР,AppendixA
 }]{docs.pdf}
 
