--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -1,6 +1,6 @@
 @online{maturityofvpl,
   title={The maturity of visual programming},
-  author={Rémi D.},
+  author={Rémi, D.},
   journal={craft ai},
   year={2015},
   url = {https://www.craft.ai/blog/the-maturity-of-visual-programming},
@@ -34,7 +34,7 @@
 
 @online{specialcase,
   title={Special Case},
-  author={Martin Fowler},
+  author={Fowler, Martin},
   journal={EEA Catalog},
   url = {https://martinfowler.com/eaaCatalog/specialCase.html},
   urldate = {05.06.2021},
@@ -52,7 +52,7 @@
 @online{purefunctions,
   title={Pure Functions, Laziness, I/O, and Monads},
   journal={School of Haskell},
-  author={Bartosz Milewski},
+  author={Milewski, Bartosz},
   year={2014},
   medium={Электронный ресурс},
   url = {https://www.schoolofhaskell.com/school/starting-with-haskell/basics-of-haskell/3-pure-functions-laziness-io},
@@ -151,7 +151,7 @@
 
 @online{harrison97,
   title     = {Введение в функциональное программирование},
-  author    = {Джон Харрисон},
+  author    = {Харрисон, Джон},
   year      = {1997},
   url = {https://funprog-ru.github.io/},
   urldate = {30.05.2021},
@@ -179,7 +179,7 @@ edition = {2nd}
 
 @book{elminaction,
   title     = {Elm in Action},
-  author    = {Richard Feldman},
+  author    = {Feldman, Richard},
   publisher = {Manning Publications},
   year      = {2020},
   isbn = {9781617294044}
@@ -208,7 +208,7 @@ numerous short and extended examples and exercises.}
 
 @book{fp93,
   title     = {Функциональное программирование},
-  author    = {Филд А. and Харрисон П.},
+  author    = {Филд, А. and Харрисон, П.},
   publisher = {Мир},
   year      = {1993},
   isbn = {5-03-001870-0}
@@ -238,13 +238,14 @@ numerous short and extended examples and exercises.}
 }
 
 @book{staroletovfunlang,
-  title={Старолетов, С.М. Функциональные языки распределённых систем: учебное пособие},
+  title={Функциональные языки распределённых систем: учебное пособие},
   author={Старолетов, С.М.},
+  publisher={АлтГТУ им. И. И. Ползунова},
   year={2019}
 }
 
 @book{clrs,
-  title={Алгоритмы. Построение и анализ:[пер. с англ.]},
+  title={Алгоритмы. Построение и анализ},
   author={Кормен, Томас and Лейзерсон, Чарльз and Ривест, Рональд and Штайн, Клиффорд},
   year={2009},
   publisher={Издательский дом Вильямс}
@@ -253,7 +254,7 @@ numerous short and extended examples and exercises.}
 @book{tapl,
   title={Типы в языках программирования},
   author={Пирс, Бенджамин},
-  journal={М.: Лямбда Пресс Добросвет},
+  publisher={М.: Лямбда Пресс Добросвет},
   pages={656},
   year={2012}
 }
