--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -288,7 +288,7 @@ $f:x$ находится подстановкой $f:x, f \equiv r \Rightarrow r
     \item является детерминированной;
     \item не имеет побочных эффектов (не ссылается на данные, 
      значения которых могут измениться в процессе работы программы
-     и не производит таких изменений). \cite{purefunctions}
+     и не производит таких изменений) \cite{purefunctions}.
 \end{itemize}
 
 Программы, состоящие из чистых функций, могут быть распараллелены
@@ -304,7 +304,7 @@ $f:x$ находится подстановкой $f:x, f \equiv r \Rightarrow r
     \item называть с помощью переменных;
     \item передавать в функции в качестве параметров;
     \item получать из функций в виде результата;
-    \item включать в структуры данных. \cite[с.~87]{sicp}
+    \item включать в структуры данных \cite[с.~87]{sicp}.
 \end{itemize}
 
 Если в языке программирования для функций выполнены вышеперечисленные условия,
@@ -411,7 +411,7 @@ Model-View-Controller --- (MVC, <<Модель-Представление-Кон
 \begin{enumerate}
     \item на основе модели в \textit{View} отрисовывается интерфейс;
     \item при пользовательском действии в \textit{Update} посылается сообщение;
-    \item в функции \textit{Update} обрабатывается текущая модель данных программы и посланное сообщение, функция возвращает новую модель, инициируется перерисовка \textit{View}. \cite{elminaction}
+    \item в функции \textit{Update} обрабатывается текущая модель данных программы и посланное сообщение, функция возвращает новую модель, инициируется перерисовка \textit{View} \cite{elminaction}.
 \end{enumerate}
 
 \FloatBarrier
@@ -432,7 +432,7 @@ Model-View-Controller --- (MVC, <<Модель-Представление-Кон
 
 \subsection{Структура трёхпроходного компилятора}\label{sec:ch1/sec5/subsec1}
 
-Структурно трехфазовый компилятор представляется следующим образом:
+Структурно трёхпроходный компилятор представляется следующим образом:
 
 \begin{figure}[ht]
 	\centering
@@ -496,7 +496,7 @@ Model-View-Controller --- (MVC, <<Модель-Представление-Кон
     слабостей. Обычно гибридные представления используют
     линейные части для представления блоков последовательного
     кода, и графы для представления потока управления между
-    этими блоками. \cite[с.~223]{engineeringacompiler}
+    этими блоками \cite[с.~223]{engineeringacompiler}.
 \end{itemize}
 
 \subsection{Графовые промежуточные представления. Граф зависимостей}\label{sec:ch1/sec5/subsec4}
@@ -526,7 +526,7 @@ Model-View-Controller --- (MVC, <<Модель-Представление-Кон
 Простой алгоритм топологической сортировки Тарьяна заключается
 в обходе всех вершин графа в глубину, и добавлении вершины в начало
 изначально пустого списка при завершении работы над вершиной \cite[650]{clrs}.
-Топологическая сортировка выполняется за время $\Theta(V + E)$, где $V$ ---
+Топологическая сортировка выполняется за время $O(V + E)$, где $V$ ---
 количество вершин в графе, а $E$ --- количество ребер.
 
 \subsection{Линейные промежуточные представления. SSA-форма}\label{sec:ch1/sec5/subsec5}
@@ -558,7 +558,7 @@ SSA-формы используются в инфраструктурах ком
     на которую нацелен компилятор;
     \item генерация кода:
     преобразованное промежуточное представление переводится в код
-    на выходном языке. \cite[с.~619]{dragonbook}
+    на выходном языке \cite[с.~619]{dragonbook}.
 \end{itemize}
 
 \section{Методы оптимизации рекурсии}\label{sec:ch1/sec7}
@@ -622,7 +622,7 @@ SSA-формы используются в инфраструктурах ком
 сопоставимого с $O(F_n)$, до $O(n)$, тем самым приблизившись к сложности итеративного алгоритма
 вычисления функции Фибоначчи. Однако мемоизируемая версия требует $O(n)$ памяти под мемо-таблицы,
 когда итеративный алгоритм использует $O(1)$ памяти. В общем случае мемоизация незавершимых
-или медленно сходящихся рекурсивных функций может вызвать неконтроллируемую утечку памяти;
+или медленно сходящихся рекурсивных функций может вызвать неконтролируемую утечку памяти;
 поэтому данной оптимизацией следует пользоваться с осторожностью.
 
 \section{Обзор связанных программных средств}\label{sec:ch1/sec8}
