--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -103,7 +103,7 @@ Flovver --- аппликативный язык, то есть, вычислит
 
 Пример эквивалентной семантики, реализованной в языке Racket с использованием синтаксических макросов:
 
-\begin{lstlisting}
+\begin{lstlisting}[language=Scheme]
 ;; Комбинатор неподвижной точки
 (define Y
 (lambda (f)
