поправил пользовательские истории

--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -367,7 +367,7 @@ $f:x$ находится подстановкой $f:x, f \equiv r \Rightarrow r
 с классическими циклами. Однако существует класс рекурсивных функций,
 процесс вычисления которых может быть сведен к императивному циклу. Оптимизация
 таких функций и других шаблонов рекурсии имеет особое значение в реализации
-функциональных языков программирования и рассматривается далее в работе.
+функциональных языков программирования и \textit{рассматривается далее в работе}.
 
 \section{Elm-архитектура}\label{sec:ch1/sec4}
 
