дописал про SSA и поправил верстку в проектировании

--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -536,14 +536,94 @@ Model-View-Controller --- (MVC, <<Модель-Представление-Кон
 представление, в котором каждой значащей операции присваивается уникальное
 имя, на которое могут ссылаться операнды в других операциях \cite[с.~246]{engineeringacompiler}. 
 
+Пусть имеется участок кода, выполняемого абстрактной вычислительной машиной:
+
+\begin{lstlisting}
+...
+v = 4;
+x = v + 5;
+v = 6;
+y = v + 7;
+...
+\end{lstlisting}
+
+Переменная $v$ единожды переприсваивается и не удовлетворяет тем самым
+свойству SSA. В SSA-представлении тот же код будет выглядеть следующим образом:
+
+\begin{lstlisting}
+...
+v1 = 4;
+x = v1 + 5;
+v2 = 6;
+y = v2 + 7;
+...
+\end{lstlisting}
+
+Здесь SSA-переменные $v_1$ и $v_2$ --- \textit{версии} переменной $v$.
+
+Возникает вопрос --- как поддерживаются SSA-переменные, соответствующие
+переменной, которая изменяется при условном переходе? Имеется псевдокод:
+
+\begin{lstlisting}
+v = 0
+if P then
+    v = 4
+else
+    v = 6
+end
+\end{lstlisting}
+
+В коде при истинности предиката $P$ переменной $v$ присваивается значение $4$,
+в ином случае --- значение $6$. Аналогичный код в SSA-представлении:
+
+\begin{lstlisting}
+v1 = 0
+if P then
+    v2 = 4
+else
+    v3 = 6
+end
+\end{lstlisting}
+
+Какую из SSA-переменных ассоциировать с $v$ после выполнения оператора ветвления?
+Для выполнения этой задачи в SSA-представление вводятся $\phi$-функции.
+Использование $\phi$-функции задается как $z = \phi(v_1, \dots, v_k)$, и
+означает -- в точке вычисления $phi$-функции сходятся $k$ дуг графа потока
+упраления; при переходе управления по $i$-й дуге, $\phi$-функция эквивалентна
+присваиванию $z = v_i$.
+
+Любую программу можно перевести в SSA-форму путем добавления $\phi$-функций
+и расстановки версий переменным.
+
 SSA-форма предназначена для оптимизации кода.
 Свойство однократного присваивания имени позволяет компилятору
 обойти многие проблемы, связанные с временем жизни значений; например,
 поскольку имена никогда не переопределяются и не уничтожаются, значение
 имени доступно по любому пути, который проходит от этой операции.
 
-SSA-формы используются в инфраструктурах компиляции промышленного уровня,
+SSA-форма используется в инфраструктурах компиляции промышленного уровня,
 таких как проект LLVM \cite{llvmlang}, JavaScript-движок V8 \cite{v8crankshaft}.
+
+Так, программы на языке ассемблера LLVM записываются как блоки
+последовательностей SSA-выражений:
+
+\begin{lstlisting}[language=llvm]
+%0 = add i32 %X, %X
+%1 = add i32 %0, %0
+%result = add i32 %1, %1
+\end{lstlisting}
+
+Заметим, что в функциональных программах отстутствуют изменяемые переменные,
+следовательно, нет необходимости в сопоставлении SSA-версии переменной с ее
+состоянием в абстрактном вычислителе; поэтому, используя SSA-форму для
+описания функциональных программ, можем не опираться на понятие $\phi$-функции.
+
+SSA-форму можно использовать не только в оптимизирующих процедурах.
+В SSA-переменных удобно задавать машинно-генерируемые
+описания программ (получаемые, кроме прочего, путем трансляции из одного
+языка в другой), а при генерации кода на высокоуровневом языке,
+легко найти аналогичные заданию SSA-переменных управляющие конструкции
+(создание именованных ссылок на значение, доступных только для чтения).
 
 \subsection{Бэк-энд компилятора}\label{sec:ch1/sec5/subsec6}
 
