--- a/Dissertation/disstyles.tex
+++ b/Dissertation/disstyles.tex
@@ -102,7 +102,6 @@
 %% Работа должна быть выполнена ... размером шрифта 12-14 пунктов (ГОСТ Р 7.0.11-2011, 5.3.8). То есть не должно быть надписей шрифтом более 14. Так и поставим.
 %% Эти установки будут давать одинаковый результат независимо от выбора базовым шрифтом 12 пт или 14 пт
 \newcommand{\basegostsectionfont}{\fontsize{14pt}{16pt}\selectfont\bfseries}
-\newcommand{\basegostsectionfontt}{\fontsize{14pt}{16pt}\selectfont}
 \newcommand{\basegostsectionfontd}{\fontsize{16pt}{16pt}\selectfont\bfseries}
 
 \makechapterstyle{thesisgost}{%
@@ -137,7 +136,7 @@
 \setsecheadstyle{\basegostsectionfont\hdngalign}
 \setsecindent{12.5mm}
 
-\setsubsecheadstyle{\basegostsectionfontt\hdngalign}
+\setsubsecheadstyle{\basegostsectionfont\hdngalign}
 \setsubsecindent{12.5mm}
 
 \setsubsubsecheadstyle{\basegostsectionfont\hdngalign}
